# libtether

./: .cz.json  .gitignore  .wiswa.jsonnet  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  package.json  vcpkg.json
.claude/agents/: regen.md
.claude/skills/ci/: SKILL.md
.claude/skills/make-release/: SKILL.md
.github/workflows/: clang-format.yml  cmake.yml  codeql.yml  pages.yml  publish-winget.yml  release.yml  smoke-tests.yml  tests.yml
include/: libtether.h
man/: attach-dmg.1  detach-dmg.1  libtether.h.3
src/: CMakeLists.txt  diskimages_private.c  diskimages_private.h  teth_attach.c  teth_detach.c
tests/: CMakeLists.txt  mocks.c  mocks.h  test_attach.c  test_detach.c  test_loader.c  test_print.c
tests/fakes/: MacTypes.h
tests/fakes/CoreFoundation/: CoreFoundation.h
tests/fakes/DiskArbitration/: DiskArbitration.h
tests/fakes/sys/: mount.h  param.h
tools/: CMakeLists.txt  attach_dmg.c  detach_dmg.c
